courses/asm/deployments/playlists/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playlists-api-service
  namespace: hypertheory
spec:
  selector:
    app: playlists-api
  ports:
  - port: 80
    targetPort: 80
