courses/asm/deployments/playlists/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playlists-api-ingress
  namespace: hypertheory
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  labels:
    name: learning-resources-api-ingress
spec:
  ingressClassName: nginx

  rules:
  - host: api.hypertheory-class.com
    http:
      paths:
      - pathType: Prefix
        path: /asm/v1(/|$)(.*)
        backend:
          service:
            name: playlists-api-service
            port: 
              number: 80
